feat: sms config
