# apps/backend/app/Enums/CallProviderType.php
@@ -1,0 +1,15 @@
+<?php
+
+namespace App\Enums;
+
+enum CallProviderType: string
+{
+    case KAVE_NEGAR = 'kave_negar';
+
+    public static function GetList()
+    {
+        return collect([
+            self::KAVE_NEGAR->value,
+        ]);
+    }
+}
