# apps/backend/app/Http/Controllers/V1/Config/SmsController.php
@@ -1,0 +1,174 @@
+<?php
+
+namespace App\Http\Controllers\V1\Config;
+
+use App\Enums\SmsProviderType;
+use App\Http\Controllers\Controller;
+use App\Models\Config\ConfigSms;
+use App\Services\ConfigSmsService;
+use Illuminate\Http\Request;
+use Illuminate\Validation\Rule;
+
+class SmsController extends Controller
+{
+    public function __construct(protected ConfigSmsService $configService) {}
+
+    public function providers()
+    {
+
+        $providers = SmsProviderType::GetList();
+        $result = [];
+        foreach ($providers as $key => $provider) {
+            $result[] = [
+                'key' => $key,
+                'value' => $provider,
+            ];
+        }
+
+        return response()->json($result);
+    }
+
+    public function Index(Request $request)
+    {
+
+        $data = ConfigSms::query()->orderByDesc('is_default')->orderByDesc('is_backup')->latest();
+        if ($request->filled('name')) {
+            $data->where('name', 'like', '%'.$request->name.'%');
+        }
+        $data = $data->get();
+
+        return response()->json($data);
+
+    }
+
+    public function Show(Request $request, $id)
+    {
+        $model = ConfigSms::where('_id', $id);
+        $model = $model->firstOrFail();
+
+        return response()->json($model);
+    }
+
+    public function Delete(Request $request, $id)
+    {
+        $model = ConfigSms::where('_id', $id);
+        $model = $model->firstOrFail();
+        $model->delete();
+
+        return response()->json($model);
+    }
+
+    public function Create(Request $request)
+    {
+        $va = \Validator::make(
+            $request->all(),
+            [
+                'name' => 'required',
+                'provider' => ['required', Rule::enum(SmsProviderType::class)],
+                'apiToken' => 'required_if:provider,'.SmsProviderType::KAVE_NEGAR->value,
+                'senderNumber' => 'required_if:provider,'.SmsProviderType::KAVE_NEGAR->value,
+            ],
+        );
+        if ($va->passes()) {
+
+            if ($request->provider == SmsProviderType::KAVE_NEGAR->value) {
+
+                $isDefault = false;
+                if (ConfigSms::where('isDefault', true)->count() == 0) {
+                    $isDefault = true;
+                }
+
+                $modelArray = [
+                    'name' => $request->name,
+                    'provider' => $request->provider,
+                    'apiToken' => $request->apiToken,
+                    'senderNumber' => $request->senderNumber,
+                    'isDefault' => $isDefault,
+                    'isBackUp' => false,
+                ];
+
+                $model = ConfigSms::create($modelArray);
+
+                return response()->json([
+                    'status' => true,
+                    'data' => $model,
+                ]);
+            }
+        }
+
+        return response()->json([
+            'status' => false,
+        ]);
+
+    }
+
+    public function Update(Request $request, $id)
+    {
+        $model = ConfigSms::where('_id', $id);
+        $model = $model->firstOrFail();
+
+        $va = \Validator::make(
+            $request->all(),
+            [
+                'name' => 'required',
+                'provider' => ['required', Rule::enum(SmsProviderType::class)],
+                'apiToken' => 'required_if:provider,'.SmsProviderType::KAVE_NEGAR->value,
+                'senderNumber' => 'required_if:provider,'.SmsProviderType::KAVE_NEGAR->value,
+            ],
+        );
+
+        if ($va->passes()) {
+            if ($request->provider == SmsProviderType::KAVE_NEGAR->value) {
+
+                $modelArray = [
+                    'name' => $request->name,
+                    'provider' => $request->provider,
+                    'apiToken' => $request->apiToken,
+                    'senderNumber' => $request->senderNumber,
+                ];
+
+                $model->update($modelArray);
+
+                return response()->json([
+                    'status' => true,
+                    'data' => $model,
+                ]);
+            }
+
+        }
+
+        return response()->json([
+            'status' => false,
+        ]);
+    }
+
+    public function makeDefault($id)
+    {
+        $model = ConfigSms::where('id', $id)->firstOrFail();
+        $this->configService->makeDefault($model);
+
+        return response()->json([
+            'status' => true,
+            'data' => $model,
+        ]);
+    }
+
+    public function makeBackup($id)
+    {
+        $model = ConfigSms::where('id', $id)->firstOrFail();
+        try {
+            $this->configService->makeBackUp($model);
+        } catch (\Exception $exception) {
+
+            return response()->json([
+                'status' => false,
+                'message' => $exception->getMessage(),
+            ]);
+        }
+
+        return response()->json([
+            'status' => true,
+            'data' => $model,
+        ]);
+    }
+}
